--- a/NewHomePage/NewHomePage.html
+++ b/NewHomePage/NewHomePage.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
     <head>
-        <link rel="stylesheet" href="NewHomePage.css">
+        <link rel="stylesheet" href="./NewHomePagePictures/NewHomePage.css">
         
     </head>
     <body>
         <div class="imageHeading">
             <div class="imageHeadingContainer">
-                <img src="./NewHomePagePictures/farmingdale-fountain.jpeg" alt="">
+                <img src="./NewHomePage/farmingdale-fountain.jpeg" alt="">
                 <div class="imageHeadingTitle">
                     <h1>Farmingdale State College</h1>
                 </div>
@@ -18,17 +18,17 @@
 
                     <div class="mySlides fade">
                         <div class="numbertext">1 / 3</div>
-                        <img src="./NewHomePagePictures/farmingdale-fountain.jpeg" style="width:100%; height: 400px; object-fit: cover;">
+                        <img src="./NewHomePage/NewHomePagePictures/farmingdale-fountain.jpeg" style="width:100%; height: 400px; object-fit: cover;">
                     </div>
 
                     <div class="mySlides fade">
                          <div class="numbertext">2 / 3</div>
-                        <img src="./NewHomePagePictures/fsc-campus-center.jpeg" style="width:100%; height: 400px; object-fit: cover;">
+                        <img src="../NewHomePage/NewHomePagePictures/fsc-campus-center.jpeg" style="width:100%; height: 400px; object-fit: cover;">
                     </div>
 
                     <div class="mySlides fade">
                         <div class="numbertext">3 / 3</div>
-                        <img src="./NewHomePagePictures/Horton-Hall.jpg" style="width:100%; height: 400px; object-fit: cover;">
+                        <img src="./NewHomePage/NewHomePagePictures/Horton-Hall.jpg" style="width:100%; height: 400px; object-fit: cover;">
                     </div>
 
                 </div>
@@ -63,7 +63,7 @@
                 </script>
             </div>
             <div class="newsImage">
-                <img src="./NewHomePagePictures/fsc-zoom-event.png" alt="">
+                <img src="../NewHomePage/NewHomePagePictures/fsc-zoom-event.png" alt="">
             </div>
             <div class="upcomingEvents" style="background-color: #006f71;">
                 <h1>UPCOMING EVENTS</h1>
@@ -79,7 +79,7 @@
 
         <div class="imageBody">            
             <div class="imageBodyContainer">
-                <img src="./NewHomePagePictures/fsc-club-gathering.png" alt="">
+                <img src="../NewHomePage/NewHomePagePictures/fsc-club-gathering.png" alt="">
                 <div class="imageBodyContainerTitle">
                     <h1>Create Your Own Club To Make A Difference</h1>
                 </div>
@@ -101,7 +101,7 @@
         </div>
         <div class="clubLinkFlexContainer">
             <div class="boxBrowserContiner">
-                <img src="./NewHomePagePictures/fsc-garden2.jpg" alt="">
+                <img src="../NewHomePage/NewHomePagePictures/fsc-garden2.jpg" alt="">
                 <div class="boxBrowserContinerTitle">
                     <h2>Membership</h2>
                 </div>
@@ -111,7 +111,7 @@
             </div>      
             
             <div class="boxBrowserContiner">
-                <img src="./NewHomePagePictures/rambassadors-header.jpg" alt="">
+                <img src="../NewHomePage/NewHomePagePictures/rambassadors-header.jpg" alt="">
                 <div class="boxBrowserContinerTitle">
                     <h2>Clubs & Events</h2>
                 </div>
@@ -121,7 +121,7 @@
             </div>  
 
             <div class="boxBrowserContiner">
-                <img src="./NewHomePagePictures/fsc-merch.png" alt="">
+                <img src="../NewHomePage/NewHomePagePictures/fsc-merch.png" alt="">
                 <div class="boxBrowserContinerTitle">
                     <h2>Merchandise</h2>
                 </div>
@@ -131,7 +131,7 @@
             </div>  
 
             <div class="boxBrowserContiner">
-                <img src="./NewHomePagePictures/fsc-board-logo.png" alt="">
+                <img src="../NewHomePage/NewHomePagePictures/fsc-board-logo.png" alt="">
                 <div class="boxBrowserContinerTitle">
                     <h2>About Us</h2>
                 </div>
