--- a/NewHomePage/NewHomePage.html
+++ b/NewHomePage/NewHomePage.html
@@ -6,7 +6,7 @@
     <body>
         <div class="imageHeading">
             <div class="imageHeadingContainer">
-                <img src="./NewHomePage/farmingdale-fountain.jpeg" alt="">
+                <img src="../NewHomePage/NewHomePagePictures/farmingdale-fountain.jpeg" alt="">
                 <div class="imageHeadingTitle">
                     <h1>Farmingdale State College</h1>
                 </div>
