--- a/NewHomePage/NewHomePage.html
+++ b/NewHomePage/NewHomePage.html
@@ -59,7 +59,7 @@
                     <h2>Membership</h2>
                 </div>
                 <div class="boxBrowserContinerFooter">
-                    <button class="buttonToLearnMore"><a href="#">Click Here To See More</a></button>
+                    <button class="buttonToLearnMore"><a href="Club.php">Click Here To See More</a></button>
                 </div>
             </div>      
             
@@ -69,7 +69,7 @@
                     <h2>Clubs & Events</h2>
                 </div>
                 <div class="boxBrowserContinerFooter">
-                    <button class="buttonToLearnMore"><a href="#">Click Here To See More</a></button>
+                    <button class="buttonToLearnMore"><a href="Event.php">Click Here To See More</a></button>
                 </div>
             </div>  
 
@@ -89,7 +89,7 @@
                     <h2>About Us</h2>
                 </div>
                 <div class="boxBrowserContinerFooter">
-                    <button class="buttonToLearnMore"><a href="#">Click Here To See More</a></button>
+                    <button class="buttonToLearnMore"><a href="../About.php">Click Here To See More</a></button>
                 </div>
             </div>  
         </div>
