--- a/NewHomePage/NewHomePage.html
+++ b/NewHomePage/NewHomePage.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="aboutHeader">
-            <h1><a href="#">A College That Has Helped Students Succeed Since 1912</a></h1>
+            <h1>A College That Has Helped Students Succeed Since 1912</h1>
         </div>
 
         <div class="imageBody">            
@@ -42,11 +42,11 @@
         <div class="clubNewsSection">
             <div class="listOfNews">
                 <h1>News Updates</h1>
-                <h3><a href="#">ACM Club Meets With John Nader (05/4/23)</a></h3>
-                <h3><a href="#">SWiC Club Goes To SWiC Conference (05/10/23)</a></h3>
-                <h3><a href="#">MSA Club Hosts The Annual Dinner (04/27/23)</a></h3>
-                <h3><a href="#">Farmingdale Esports Club Becomes A Sponser (04/12/23)</a></h3>
-                <h3><a href="#">IEEE Club Speaker Guest James Johnson (03/13/23)</a></h3>
+                <h3>ACM Club Meets With John Nader (05/4/23)</h3>
+                <h3>SWiC Club Goes To SWiC Conference (05/10/23)</h3>
+                <h3>MSA Club Hosts The Annual Dinner (04/27/23)</h3>
+                <h3>Farmingdale Esports Club Becomes A Sponser (04/12/23)</h3>
+                <h3>IEEE Club Speaker Guest James Johnson (03/13/23)</h3>
             </div>
             <div class="">
 
