--- a/Footer/footer.html
+++ b/Footer/footer.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
 
-            <div class="label">
+            <div class="label0">
                 <h2>Farmingdale State College</h2>
             </div>
             <p style="text-align: center; color:white; margin-top: 5px">A College That Helps Prepare For Success In The Real World</p>
